--- a/views/login.jade
+++ b/views/login.jade
@@ -4,8 +4,8 @@ block content
   h1 Login
   form(action="/login", method="post")
     div
-      label Email:
-      input(type="email", name="email")
+      label User name:
+      input(type="text", name="username")
     div
       label Password:
       input(type="password", name="password")
