--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,19 @@
 doctype 5
 html
   head
-    title="Express"
+    title="Xirq.us"
+    link( href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css", 
+          rel="stylesheet")
+    link( href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css", 
+          rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/style.css')
+
   body
     block content
+
+    script( src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js", 
+            type='text/javascript')
+    script( src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js", 
+            type='text/javascript')
+
+    block footer
