--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,24 @@
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	padding-top:40px
 }
 
-a {
-  color: #00B7FF;
+.spinner { 
+	background: transparent url('../img/spinner.gif') no-repeat center center;
+	display: inline-block;
+	vertical-align: middle;
+	width: 26px;
+	height: 26px;
+}
+
+.navbar a.brand {
+	font-family:Futura,Moderna,Helvetica,sans-serif;
+  color:#eee;
+  font-weight:normal;
+  font-size:18px;
+}
+
+#map {
+	width:100%;
+	height:90%
 }
