--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,3 +22,27 @@ body {
 	width:100%;
 	height:90%
 }
+
+#map img { 
+  max-width: none;
+}
+
+#map label { 
+  width: auto; display:inline; 
+} 
+
+#searchWindow ul {
+	margin:0
+}
+
+#searchWindow form { margin: 0 }
+
+#searchWindow li {
+	list-style: none
+}
+
+#searchWindow li .icon {
+	width:20px;
+	height:20px;
+	margin-right: 3px
+}
