--- a/views/index.jade
+++ b/views/index.jade
@@ -9,15 +9,33 @@ block nav
 block outer
   #map (map goes here)
 
+  div(style='display:none')
+    #searchWindow
+      h4 Nothing here yet!
+      p search for a location to start a new feed
+      form#search(action='#search',method='get')
+        input#searchBox(type='text', placeholder='filter nearby...')
+      .searching Searching...
+      ul#seachResultList
+
 block content
 
-
 block footer
-  script( src='https://maps.googleapis.com/maps/api/js?key=#{ maps_api_key }&sensor=true',
+
+  script#searchResultItem( type='text/html' )
+    li.item
+      img.icon( src='{{ icon }}' )
+      a( href='#' ) {{ name }}
+
+
+  script( src='https://maps.googleapis.com/maps/api/js?key=#{ maps_api_key }&libraries=geometry,places&sensor=true',
           type='text/javascript')
   script( src='//cdnjs.cloudflare.com/ajax/libs/embedly-jquery/3.0.1/jquery.embedly.min.js',
-          type='text/javascript')
-  script( src='/javascripts/xirqus.js')
+    type='text/javascript')
+  script( src='//cdnjs.cloudflare.com/ajax/libs/ICanHaz.js/0.10/ICanHaz.min.js',
+    type='text/javascript')
+  script( src='/javascripts/app.js', type='text/javascript' )
+  script( src='/javascripts/xirqus.js', type='text/javascript' )
   script( type='text/javascript' )
     $(document).on('ready',function() {
       $.embedly.defaults.key = "#{ embedly_key }"
