--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html
           rel="stylesheet")
     link( href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css", 
           rel="stylesheet")
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/xirqus.css')
 
     block head
 
@@ -16,7 +16,7 @@ html
        .navbar-inner
           .container
             a.brand( href="/" ) Xirq.us
-            ul.nav
+            ul#navTop.nav
               li
                 span.spinner( style='display:none;margin-top:6px' )
 
