embedly works, publishing new tweets seems confused...

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,7 +25,7 @@ html
             .nav-collapse.collapse.pull-right
               ul.nav
                 li
-                  a( href='#' ) (email)
+                  a#nav_email( href='#' ) (email)
                 li
                   a(href="/logout") Logout
 
