--- a/views/index.jade
+++ b/views/index.jade
@@ -1,32 +1,61 @@
 extends layout
 
-block nav
+block nav // additional nav components
   li
     a#my_location( href='#myLocation' )
       i.icon-screenshot.icon-white(style='margin-right:3px')
       | Me
 
+// parts of the DOM before bootstrap .container
 block outer
-  #map (map goes here)
+  #map (Loading map...)
 
   div(style='display:none')
+    // this DOM element is used when a map area is clicked to search nearby
     #searchWindow
-      h4 Nothing here yet!
-      p search for a location to start a new feed
+      h5 Nothing here yet!
+      small search for a location to start a new feed
       form#search(action='#search',method='get')
         input#searchBox(type='text', placeholder='filter nearby...')
       .searching Searching...
       ul#seachResultList
 
+  #feedWindow.modal.hide.fade
+    .modal-header
+      button.close( type="button", data-dismiss="modal", aria-hidden="true" )
+        &times;
+      form#postForm.form-horizontal(action='#post',method='post')
+        .input-append
+          input#postBox.span4( type='text', placeholder='Say something...' )
+          button.btn( type='submit') Post!
+    .modal-body
+      ul.feed
+        li loading...
+
 block content
 
 block footer
 
+  // icanhaz template:
   script#searchResultItem( type='text/html' )
     li.item
       img.icon( src='{{ icon }}' )
-      a( href='#' ) {{ name }}
+      a( href='#place:{{ id }}' ) {{ name }}
 
+  script#feedItem( type='text/html' )
+    li.item
+      img.icon.pull-right( src='http://www.gravatar.com/avatar/{{ from.email_hash }}?s=20' )
+      strong {{ from.userName }}
+      p {{{ body }}}
+      .preview.hide.slide
+      small.muted {{ ts }}
+
+  script#embedPreview( type='text/html' )
+    .well
+      img.icon.pull-right( src='{{ thumbnail_url }}' )
+      strong {{ title }}
+      p {{ description }}
+      a( href='{{ original_url }}' ) {{ provider_url }}
 
   script( src='https://maps.googleapis.com/maps/api/js?key=#{ maps_api_key }&libraries=geometry,places&sensor=true',
           type='text/javascript')
@@ -34,10 +63,23 @@ block footer
     type='text/javascript')
   script( src='//cdnjs.cloudflare.com/ajax/libs/ICanHaz.js/0.10/ICanHaz.min.js',
     type='text/javascript')
+  script( src="/socket.io/socket.io.js", type='text/javascript' )
   script( src='/javascripts/app.js', type='text/javascript' )
   script( src='/javascripts/xirqus.js', type='text/javascript' )
   script( type='text/javascript' )
     $(document).on('ready',function() {
       $.embedly.defaults.key = "#{ embedly_key }"
+
+      $(document).ajaxStart(function() {
+        $('#navTop .spinner').show()
+      })
+      $(document).ajaxStop(function() {
+        $('#navTop .spinner').hide()
+      })
+
+      xirqus.user = {
+        name : "#{ username }",
+        email_hash : "#{ email_hash }"
+      }
       xirqus.init()
     })
