--- a/public/stylesheets/xirqus.scss
+++ b/public/stylesheets/xirqus.scss
@@ -1,6 +1,10 @@
 
 body {
-	padding-top:40px
+	padding-top: 40px
+}
+
+.navbar-fixed-top {
+	z-index: 1050 // keep this above dialog backdrop, which is 1040
 }
 
 .spinner { 
@@ -13,14 +17,14 @@ body {
 
 .navbar a.brand {
 	font-family:Futura,Moderna,Helvetica,sans-serif;
-  color:#eee;
-  font-weight:normal;
-  font-size:18px;
+  color: #eee;
+  font-weight: normal;
+  font-size: 18px;
 }
 
 #map {
-	width:100%;
-	height:90%;
+	width: 100%;
+	height: 90%;
 	img { 
 		max-width: none;
 	}
@@ -31,6 +35,7 @@ body {
 }
 
 #feedWindow {
+	form { margin: 0 }
 	ul.feed { margin:0 }
 	li.item { 
 		margin-top: 2px;
@@ -39,11 +44,14 @@ body {
 		strong { margin-right: 4px }
 		p { margin: 0 }
 	}
-
+	.title { 
+		line-height: 1.8em;
+		margin: 3px 12px
+	}
 }
 
 #searchWindow {
-	ul { margin:0 }
+	ul { margin: 0 }
 	form { margin: 0 }
 	li { 
 		list-style: none ;
