tweaked preview styles

--- a/public/stylesheets/xirqus.scss
+++ b/public/stylesheets/xirqus.scss
@@ -43,6 +43,7 @@ body {
 		border-bottom: solid 1px #ccc;
 		strong { margin-right: 4px }
 		p { margin: 0 }
+		.preview { margin-top:5px }
 	}
 	.title { 
 		line-height: 1.8em;
