--- a/public/stylesheets/xirqus.scss
+++ b/public/stylesheets/xirqus.scss
@@ -1,6 +1,6 @@
 
-body {
-	padding-top: 40px
+.container.main {
+	margin-top: 40px;
 }
 
 .navbar-fixed-top {
@@ -22,9 +22,12 @@ body {
   font-size: 18px;
 }
 
-#map {
+.map-container { 
 	width: 100%;
-	height: 90%;
+	position:absolute 
+}
+
+#map {
 	img { 
 		max-width: none;
 	}
