--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype 5
 html
   head
     title="Xirq.us"
+    meta(name='description', content="Find and talk about what's happening nearby!")
 
     link( href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css", 
           rel="stylesheet")
@@ -32,7 +33,7 @@ html
 
     block outer
 
-    .container
+    .container.main
       block content
 
     script( src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js", 
