default to 'retro' gravatar icons

--- a/views/index.jade
+++ b/views/index.jade
@@ -49,7 +49,7 @@ block footer
     li.item
       .pull-right
         strong {{ from.userName }}
-        img.icon( src='http://www.gravatar.com/avatar/{{ from.email_hash }}?s=20' )
+        img.icon( src='http://www.gravatar.com/avatar/{{ from.email_hash }}?s=20&d=retro' )
       p {{{ body }}}
       .preview.hide.slide
       small.muted {{ ts }}
