--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html
           rel="stylesheet")
     link( href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css", 
           rel="stylesheet")
-    link(rel='stylesheet', href='/stylesheets/xirqus.css')
+    != css('xirqus')
 
     block head
 
