--- a/views/index.jade
+++ b/views/index.jade
@@ -25,21 +25,23 @@ block outer
       ul.feed
         li loading...
 
+  #searchWindow.modal.hide.fade
+    .modal-header
+      button.close( type="button", data-dismiss="modal", aria-hidden="true" )
+        &times;
+      h5.title Nothing here yet!
+      small Choose a location or search to start a new feed
+      form#placeSearch(action='#search',method='get')
+        input#searchBox(type='text', placeholder='filter nearby...')
+    .modal-body
+      .searching Searching...
+      ul.resultList
+
 block content
 
 block footer
 
   //- icanhaz templates:
-  script#searchWindow( type='text/html' )
-    #searchWindowContent
-      h5.title Nothing here yet!
-      small Choose a a location or search to start a new feed
-      form#search(action='#search',method='get')
-        input#searchBox(type='text', placeholder='filter nearby...')
-      .searching Searching...
-      ul.resultList
-
-
   script#searchResultItem( type='text/html' )
     li.item
       img.icon( src='{{ icon }}' )
@@ -67,7 +69,6 @@ block footer
     type='text/javascript')
   script( src='//cdnjs.cloudflare.com/ajax/libs/ICanHaz.js/0.10/ICanHaz.min.js',
     type='text/javascript')
-  script( src="/javascripts/infobubble-compiled.js", type='text/javascript' )
   script( src="/socket.io/socket.io.js", type='text/javascript' )
   != js('utils')
   != js('xirqus')
