added viewport meta tag

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,9 @@ html
     title="Xirq.us"
     meta(name='description', content="Find and talk about what's happening nearby!")
 
+    meta(name="viewport", content="initial-scale=1.0, width=device-width, user-scalable=no")
+    //- link(rel="icon", type="image/png", href="/static/favicon.ico")
+    //- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons 
     link( href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css", 
           rel="stylesheet")
     link( href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css", 
